@@ -412,3 +412,7 @@ MerchantWare V4 (July 2013)
 Platron integration (July 2013)
 
 * Alexey Kiryushin (alexwl)
+
+MoneyMovers (September 2013)
+
+* Jeffery Utter (jeffutter)
