@@ -4,6 +4,7 @@
 * Spreedly: Pass country with other address fields [hoenth]
 * SecureNet: Fix order of xml params [duff]
 * Paymill: Add support for void [duff]
+* Add MoneyMovers gateway [jeffutter]
 
 == Version 1.38.1 (September 16, 2013)
 
